clusters/hybrid01/config/polaris/polaris-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: polaris
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
